fix(backend,webapp): derive an event location's areas from its areas, not from its seats
AreaDTO was built by grouping seats by area, so an area with no seats yet never reached the API; derive it from the location's own areas instead.